--- a/.github/workflows/release-package.yml
+++ b/.github/workflows/release-package.yml
@@ -27,7 +27,11 @@ jobs:
         with:
           node-version: 12
           registry-url: https://npm.pkg.github.com/
-      - run: npm ci
-      - run: npm publish
+      - uses: pnpm/action-setup@v2.0.1
+        with:
+          version: 6.20.1
+          run_install: true
+      - run: pnpm install
+      - run: pnpm publish
         env:
           NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
